--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-toastify": "^7.0.4",
     "web3": "^1.3.5"
   },
   "devDependencies": {
